added model type selection

--- a/src/CSimple/App.xaml
+++ b/src/CSimple/App.xaml
@@ -4,6 +4,7 @@
              xmlns:page="clr-namespace:CSimple.Pages"
              xmlns:converters="clr-namespace:CSimple.Converters"
              xmlns:controls="clr-namespace:CSimple.Controls"
+             xmlns:behaviors="clr-namespace:CSimple.Behaviors"
              x:Class="CSimple.App">
     <Application.Resources>
         <ResourceDictionary>
